Remove zero-fling-velocity DCHECKs.

As of https://codereview.chromium.org/2918053002, zero-velocity flings
are used and expected to work (because using FlingCancel instead would
lose the scroller latching information from the first fling which must
be preserved for middle-click autoscroll).  But I had forgotten to
verify against a DCHECK-enabled build.  This deletes all three DCHECKs.

BUG=750774,727964

Change-Id: If60f5f7699cf88d87adc642f8bffb95da2db8a3a
Reviewed-on: https://chromium-review.googlesource.com/607213
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Alexandre Elias <aelias@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493215}
Former-commit-id: 955a7967ee52ade9fd54724a9f798a2fb7477ab3